--- a/AI.LearningPlatform.DAL/AI.LearningPlatform.DAL.csproj
+++ b/AI.LearningPlatform.DAL/AI.LearningPlatform.DAL.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+	<PackageReference Include="Betalgo.OpenAI" Version="8.7.2" />
+
   </ItemGroup>
 
 </Project>
