--- a/AI.LearningPlatform.Server/AI.LearningPlatform.Server.csproj
+++ b/AI.LearningPlatform.Server/AI.LearningPlatform.Server.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Betalgo.OpenAI" Version="8.7.2" />
+
+
   </ItemGroup>
 
   <ItemGroup>
