--- a/AI.LearningPlatform.Server/AI.LearningPlatform.Server.csproj
+++ b/AI.LearningPlatform.Server/AI.LearningPlatform.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -29,6 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AI.LearningPlatform.BL\AI.LearningPlatform.BL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\" />
   </ItemGroup>
 
 </Project>
